--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Калькулятор комплексных чисел</title>
+    <title>Калькулятор комплексних чисел</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="calculator">
-        <h2>Калькулятор комплексных чисел</h2>
-        <label for="real1">Действительная часть 1:</label>
+        <h2>Калькулятор комплексних чисел</h2>
+        <label for="real1">Дійсна частина 1:</label>
         <input type="number" id="real1">
-        <label for="imaginary1">Мнимая часть 1:</label>
+        <label for="imaginary1">Уявна частина 1:</label>
         <input type="number" id="imaginary1">
         <br>
-        <label for="real2">Действительная часть 2:</label>
+        <label for="real2">Дійсна частина 2:</label>
         <input type="number" id="real2">
-        <label for="imaginary2">Мнимая часть 2:</label>
+        <label for="imaginary2">Уявна частина 2:</label>
         <input type="number" id="imaginary2">
         <br>
-        <button onclick="add()">Сложить</button>
-        <button onclick="subtract()">Вычесть</button>
-        <button onclick="multiply()">Умножить</button>
+        <button onclick="add()">Скласти</button>
+        <button onclick="subtract()">Відняти</button>
+        <button onclick="multiply()">Множити</button>
         <br><br>
         <div id="result"></div>
     </div>
